--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
 h1{
-    background-color: aqua;
-}
-h2{
-    background-color: brown;
-}
-h3{
-    background-color: magenta;
+    background-color: black;
+    color: orangered;
 }
